@@ -1,0 +1,8 @@
+#ifndef WIN32LAYER
+#define WIN32LAYER
+
+#define R_OK 0x04
+
+int access(const char* filename, int mode);
+
+#endif
